--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
-  <body
-    class="min-h-screen container mx-auto bg-gradient-to-t from-[#F0F8FF] from-20% to-transparent to-80%"
-  >
-    <div id="root"></div>
+  <body class="container mx-auto bg-gray-100">
+    <div id="root" class="flex flex-col justify-between lg:min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
