--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
   </head>
-  <body class="container mx-auto bg-gray-100">
+  <body class="container mx-auto bg-gray-100 text-xl">
     <div id="root" class="flex flex-col justify-between lg:min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
